Change of colors of design, fix scrollbar, moved project-card to the project page.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,6 +4,11 @@
 @import "tailwindcss/utilities";
 
 
+html {
+  /* fix the content moving with scrollbar. */
+  overflow-y: scroll;
+}
+
 html,
 body {
   padding: 0;
